--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
     "dev": "next dev -p 8888",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@emotion/cache": "^11.6.0",
